# cnapp-flask

./: Dockerfile  Makefile  README.md  pyproject.toml  run.py  tox.ini
cnapps/: application.py  checker.py  errors.py  exceptions.py  settings.py  version.py  web.py
cnapps/api/: apis.py  commons.py  docs.py  health.py  version.py
cnapps/api/v1/: auth.py  core.py  docs.py
cnapps/api/v1alpha/: core.py  docs.py
cnapps/dao/: commons.py  users.py
cnapps/middleware/auth/: jwt.py  request.py
cnapps/middleware/config/: environment.py
cnapps/middleware/logging/: log.py
cnapps/middleware/metrics/: prometheus.py
cnapps/middleware/tracing/: opencensus.py
cnapps/templates/: error.html  home.html
cnapps/tests/: commons.py  http.py  settings.py  test_application.py  test_checker.py  test_errors.py  test_version.py  test_web.py
cnapps/tests/api/: test_api_health.py  test_api_version.py  test_apis.py
cnapps/tests/middleware/auth/: test_jwt.py
cnapps/tests/middleware/logging/: test_log.py
cnapps/tests/middleware/metrics/: test_prometheus.py
cnapps/tests/middleware/tracing/: test_tracing.py
cnapps/utils/: errors.py
deploy/k8s/commons/: deployment.yaml  service.yaml
deploy/k8s/minikube/: configmap-local.yaml  ingress-local.yaml
scripts/: commons.sh  kubernetes.sh
