[tool.poetry]
name = "cnapp-flask"
version = "0.2.0"
description = "Cloud Native Applications using Flask"
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]
readme = "README.md"
license = "Apache License"
homepage = "https://github.com/cnapp/cnapp-flask"
repository = "https://github.com/cnapp/cnapp-flask"
documentation = "https://github.com/cnapp/cnapp-flask"
keywords = ["cnapp", "python"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0.2"
Flask-JWT-Extended = "^3.16"
Flask-SQLAlchemy = "^2.3"
sqlalchemy = "^1.2"
apispec = "^0.39.0"
flask-apispec = "^0.7.0"
flask-marshmallow = "^0.9.0"
marshmallow = "^2.18"
marshmallow-sqlalchemy = "^0.15.0"
daiquiri = "^1.5"
prometheus-client = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
pytest-cov = "^2.6"
pytest-sugar = "^0.9.2"
tox = "^3.7"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
